--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
 	],
 	"dependencies": {
 		"jquery": "^1.11.0",
-		"ax5core": ">=0.4.0"
+		"ax5core": ""
 	},
 	"license": "MIT",
 	"homepage": "ax5.io"
