--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
 	"dependencies": {
 		"ax5core": ">=0.4.0"
 	},
+	"scripts": {
+		"test": "karma start karma.conf.js"
+	},
 	"devDependencies": {
 		"jquery": "^3.1.1",
 		"karma": "^1.3.0",
