--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,9 @@
         "ax5ui-mask"
     ],
     "dependencies": {
-        "jquery": "^1.11.0",
-        "ax5core": ">=1.3.0"
+        "jquery": "",
+        "ax5core": ">=1.3.0",
+        "bootstrap-sass": ""
     },
     "license": "MIT",
     "homepage": "ax5.io"
